[gd_scene load_steps=23 format=2]

[ext_resource path="res://art/Enemy B.png" type="Texture" id=1]
[ext_resource path="res://EnemyB.gd" type="Script" id=2]
[ext_resource path="res://art/sci-fi_explosion_1-42890.mp3" type="AudioStream" id=3]
[ext_resource path="res://art/Enemy_B_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Explosion Frames.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 384, 384 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 384, 384 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 384, 384 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 0, 384, 384, 384 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 384, 384, 384, 384 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 768, 384, 384, 384 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 0, 768, 384, 384 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 384, 768, 384, 384 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 768, 768, 384, 384 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 0, 1152, 384, 384 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "explode",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 10.6667

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.933333, 0.521569, 0.247059, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Theme" id=6]
ProgressBar/colors/font_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 5 )
ProgressBar/styles/fg = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 133.333, 69.3333 )

[node name="EnemyB" type="Area2D" groups=["Active_Enemy_B", "Enemy"]]
scale = Vector2( 0.75, 0.75 )
z_index = 1
script = ExtResource( 2 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( -1, -8 )
scale = Vector2( 0.508464, 0.506836 )
frames = SubResource( 8 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.33333, 21.3333 )
shape = SubResource( 2 )

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -31.0
margin_top = -68.0
margin_right = 32.0
margin_bottom = -52.0
theme = SubResource( 6 )
value = 50.0
percent_visible = false

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 133.334, 20 )
shape = SubResource( 19 )

[node name="Location" type="Position2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
